src/objects/CustomCampaignMember__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CustomCampaignMembers</relationshipLabel>
        <relationshipName>CustomCampaignMembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomCampaign__c</fullName>
        <label>CustomCampaign</label>
        <referenceTo>CustomCampaign__c</referenceTo>
        <relationshipLabel>CustomCampaignMembers</relationshipLabel>
        <relationshipName>CustomCampaignMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CustomCampaignMember</label>
    <nameField>
        <displayFormat>CM{00000000}</displayFormat>
        <label>CustomCampaignMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomCampaignMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>